%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: PlayerAnimator
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: Speed
    m_Type: 1
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Sneaking
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Dead
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Shouting
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
  - serializedVersion: 3
    m_Name: Shouting
    m_StateMachine: {fileID: 110759692}
    m_Mask: {fileID: 101100000, guid: 8b2957cbcb8a82742a7a309309d733f5, type: 2}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &20600000
BlendTree:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Locomotion
  m_Childs:
  - m_Motion: {fileID: 7400000, guid: b1a5e04ae51004842aba06704a6c2903, type: 3}
    m_Threshold: 1.55574858
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400000, guid: 1cb8ed3cbba15f0479fbae54e0a963df, type: 3}
    m_Threshold: 5.66775036
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  m_BlendParameter: Speed
  m_BlendParameterY: Speed
  m_MinThreshold: 1.55574858
  m_MaxThreshold: 5.66775036
  m_UseAutomaticThresholds: 0
  m_BlendType: 0
--- !u!1101 &110100000
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110212015}
  m_TransitionDuration: .104166664
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: Speed
    m_EventTreshold: .100000001
    m_ExitTime: .895833313
  - m_ConditionMode: 2
    m_ConditionEvent: Sneaking
    m_EventTreshold: .100000001
    m_ExitTime: .895833313
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110109258
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110227387}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .153061226
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: Speed
    m_EventTreshold: .100000001
    m_ExitTime: .846938789
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110131817
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110250931}
  m_DstState: {fileID: 110202754}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Shouting
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110132559
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110227387}
  m_TransitionDuration: .104166664
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: Speed
    m_EventTreshold: .100000001
    m_ExitTime: .895833313
  - m_ConditionMode: 1
    m_ConditionEvent: Sneaking
    m_EventTreshold: .100000001
    m_ExitTime: .895833313
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110151478
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110227387}
  m_DstState: {fileID: 110212015}
  m_TransitionDuration: .153061226
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: Speed
    m_EventTreshold: .100000001
    m_ExitTime: .846938789
  - m_ConditionMode: 2
    m_ConditionEvent: Sneaking
    m_EventTreshold: .100000001
    m_ExitTime: .846938789
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110173572
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110202754}
  m_DstState: {fileID: 110250931}
  m_TransitionDuration: .133928567
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Shouting
    m_EventTreshold: 0
    m_ExitTime: .870000005
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110179928
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110212015}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .315789372
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: Speed
    m_EventTreshold: .100000001
    m_ExitTime: .684210658
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110182652
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110259793}
  m_TransitionDuration: .142412379
  m_TransitionOffset: .202903241
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Dead
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110198541
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110212015}
  m_DstState: {fileID: 110227387}
  m_TransitionDuration: .315789372
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: Speed
    m_EventTreshold: .100000001
    m_ExitTime: .684210658
  - m_ConditionMode: 1
    m_ConditionEvent: Sneaking
    m_EventTreshold: .100000001
    m_ExitTime: .684210658
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: dffa50cfe77e0434bbfa71245b3dd529, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 120, y: -108, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110202754
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Shout
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 7b1e5fdbac0406f42a725702d23d8824, type: 3}
  m_ParentStateMachine: {fileID: 110759692}
  m_Position: {x: -228, y: -72, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110212015
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Locomotion
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 20600000}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 336, y: -216, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110227387
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Sneak
  m_Speed: 1.70000005
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: a72fb85e2d133804d982acc9f29e67c7, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -96, y: -216, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110250931
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: New State
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 110759692}
  m_Position: {x: 24, y: -72, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110259793
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Dying
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 4b722364804e95e438feb87f955c83b4, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -312, y: -204, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110200000}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110212015}
  - {fileID: 110227387}
  - {fileID: 110259793}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second:
      - {fileID: 110182652}
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110100000}
      - {fileID: 110132559}
    data:
      first: {fileID: 110212015}
      second:
      - {fileID: 110179928}
      - {fileID: 110198541}
    data:
      first: {fileID: 110227387}
      second:
      - {fileID: 110151478}
      - {fileID: 110109258}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: -288, y: -108, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
--- !u!1107 &110759692
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Shouting
  m_DefaultState: {fileID: 110250931}
  m_States:
  - {fileID: 110250931}
  - {fileID: 110202754}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 110250931}
      second:
      - {fileID: 110131817}
    data:
      first: {fileID: 110202754}
      second:
      - {fileID: 110173572}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 48, y: 12, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
